--- a/Reston.EProc.Runner.IIS/View/pengadaan-list.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-list.html
@@ -95,7 +95,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li id="tambah" style="display:none"><a title="Tambah" href="pengadaan-add.html"><i class="fa fa-plus " style="font-size:20px;color:green"></i></a></li>
+                            <li id="tambah" style="display:none"><a id="pilih-tipe-pengadaan" title="Pilih Tipe Pengadaan" href="#"><i class="fa fa-plus " style="font-size:20px;color:green"></i></a></li>
                             <li id="loader" style="display:none"> <img src="Images/ajax-loader.gif" /></li>
                         </ul>
                     </div>
