Create RKS Template Sudah Bisa Add RKS Proses

--- a/Reston.EProc.Runner.IIS/View/create-rks.html
+++ b/Reston.EProc.Runner.IIS/View/create-rks.html
@@ -219,6 +219,18 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div><br />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-2 control-label">Wilayah Kerja/Region:</label>
+                                            <div class="col-sm-4">
+                                                <select id="region" name="Region" class="form-control select2" style="width: 100%;">
+                                                    <option selected disabled>--Region--</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-md-6">
@@ -230,7 +242,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="padtop  button-row">
-                                                <a alt="tambah judul" class="add btn btn-primary add-judul" data-toggle="tooltip" title="Tambah Judul"><span class="fa fa-plus"></span> Add Judul</a>
+                                                <a alt="tambah judul" class="add btn btn-primary add-judul" attr="0" data-toggle="tooltip" title="Tambah Judul"><span class="fa fa-plus"></span> Add Judul</a>
                                             </div>
                                         </div>
                                     </div>
@@ -240,14 +252,14 @@
                                             <table id="example1" class="table table-bordered table-hover" width="100%">
                                                 <thead>
                                                     <tr>
-                                                        <th>Nama</th>
-                                                        <th>Item</th>
-                                                        <th>Satuan</th>
-                                                        <th>Jumlah</th>
-                                                        <th>HPS Satuan</th>
-                                                        <th>Total</th>
-                                                        <th>Keterangan</th>
-                                                        <th>Action</th>
+                                                        <th class="tengah">Nama</th>
+                                                        <th class="tengah">Item</th>
+                                                        <th class="tengah">Satuan</th>
+                                                        <th class="tengah">Jumlah</th>
+                                                        <th class="tengah">HPS Satuan</th>
+                                                        <th class="tengah">Total</th>
+                                                        <th class="tengah">Keterangan</th>
+                                                        <th class="tengah">Action</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody></tbody>
@@ -266,7 +278,7 @@
                                     <!--</div>
                                         </div>
                                     </div>-->
-                                    <table style="display:none" id="example2" class="table table-bordered  editabletable" width="100%">
+                                    <!--<table style="display:none" id="example2" class="table table-bordered  editabletable" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>Item</th>
@@ -279,7 +291,7 @@
                                             </tr>
                                         </thead>
                                         <tbody></tbody>
-                                    </table>
+                                    </table>-->
                                 </div>
                             </form>
                         </div>
