Monitoring Selection, add pengadaan terbuka, add monitoring proyek

--- a/Reston.EProc.Runner.IIS/View/approval.html
+++ b/Reston.EProc.Runner.IIS/View/approval.html
@@ -81,7 +81,7 @@
                     </a>
                     <div class="navbar-custom-menu pull-left">
                         <ul class="nav navbar-nav">
-                            <li>    <a id="judul-page" href="#">LIST TO DO</a></li>
+                            <li>    <a id="judul-page" href="#">LISTS TO DO</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -126,7 +126,7 @@
                                     </br>
                                     <div class="form-group col-md-3">
                                         <div class="input-group date">
-                                    			<h3 class="box-title text-blue-mtf cursor-pointer repository" style="margin-left: 60px; font-weight: bold;">List To Do !</h3>
+                                    			<h3 class="box-title text-blue-mtf cursor-pointer repository" style="margin-left: 60px; font-weight: bold;">Lists To Do !</h3>
                                         	</div>
                                     	</div>
                                     </br></br></br></br>
@@ -151,6 +151,16 @@
                                                 <td class="rata_kiri text-bold">Approval Persetujuan Pemenang Sudah di Setujui</td>
                                                 <td style="text-align:center; color:black; font-weight:bold;"><a href="approval-persetujuan-pemenang-sudah-disetujui.html">7</a></td>
                                                                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="rata_kiri text-bold">Update Status Proyek</td>
+                                                <td style="text-align:center; color:black; font-weight:bold;"><a href="approval-persetujuan-pemenang-sudah-disetujui.html">7</a></td>
+
+                                            </tr>
+                                            <tr>
+                                                <td class="rata_kiri text-bold">Proyek Monitoring</td>
+                                                <td style="text-align:center; color:black; font-weight:bold;"><a href="monitoring-selection.html">7</a></td>
+
                                             </tr>
                                         </table>
                                     </div>
