--- a/Reston.EProc.Runner.IIS/View/kontrak.html
+++ b/Reston.EProc.Runner.IIS/View/kontrak.html
@@ -135,35 +135,74 @@
             <section class="content">
                 <div class="row">
                     <div class="col-md-10">
-                         <div id="Div1">
+                        <div id="perlu_perhatian">
                             <div class="box box-white">
                                 <div class="box-header with-border">
-                                    <h3 class="box-title text-blue-mtf" id="H1">Baru</h3>
+                                    <h3 class="box-title text-blue-mtf cursor-pointer perhatian">PERLU PERHATIAN</h3>
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
-                                   <ul class="products-list product-list-in-box dalam-pelaksanaa"><i>Kosong</i></ul>
+                                    <ul class="products-list product-list-in-box perlu-perhatian">
+                                        <li class="col-md-offset-6 col-md-1">
+                                            <img src="Images/ajax-loader.gif" />
+                                        </li>
+                                    </ul>
                                 </div><!-- /.box-body -->
+                                <div class="box-footer text-center">
+                                    <!--<a id="A1" class="uppercase">Berikutnya
+                                </a>-->
+                                </div><!-- /.box-footer -->
                             </div>
                         </div>
                         <div id="rpelaksanaan">
                             <div class="box box-white">
                                 <div class="box-header with-border">
-                                    <h3 class="box-title text-blue-mtf" id="section-1">Aktif</h3>
+                                    <h3 class="box-title text-blue-mtf pelaksanaan cursor-pointer" id="section-1">DALAM PELAKSANAAN</h3>
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
-                                   <ul class="products-list product-list-in-box dalam-pelaksanaa"><i>Kosong</i></ul>
+                                    <ul class="products-list product-list-in-box dalam-pelaksanaa">
+                                        <li class="col-md-offset-6 col-md-1">
+                                            <img src="Images/ajax-loader.gif" />
+                                        </li>
+                                    </ul>
                                 </div><!-- /.box-body -->
+                                <div class="box-footer text-center">
+                                    <a id="pelaksanaan" class="uppercase pelaksanaan">Berikutnya</a>
+                                </div><!-- /.box-footer -->
                             </div>
                         </div>
 
+                        <div id="rterjadwal" start="0">
+                            <div class="box box-white">
+                                <div class="box-header with-border">
+                                    <h3 class="box-title text-blue-mtf terjadwal cursor-pointer" id="section-2">BELUM TERJADWAL</h3>
+                                </div><!-- /.box-header -->
+                                <div class="box-body">
+                                    <ul class="products-list product-list-in-box belum-terjadwal">
+                                        <li class="col-md-offset-6 col-md-1">
+                                            <img src="Images/ajax-loader.gif" />
+                                        </li>
+                                    </ul>
+                                </div><!-- /.box-body -->
+                                <div class="box-footer text-center">
+                                    <a id="terjadwal" class="uppercase terjadwal">Berikutnya</a>
+                                </div><!-- /.box-footer -->
+                            </div>
+                        </div>
                         <div id="rarsip">
                             <div class="box box-white">
                                 <div class="box-header with-border">
-                                    <h3 class="box-title text-blue-mtf" id="section-3">ARSIP</h3>
+                                    <h3 class="box-title text-blue-mtf arsip cursor-pointer" id="section-3">ARSIP</h3>
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
-                                    <ul class="products-list product-list-in-box dalam-pelaksanaa"><i>Kosong</i></ul>
+                                    <ul class="products-list product-list-in-box list-arsip">
+                                        <li class="col-md-offset-6 col-md-1">
+                                            <img src="Images/ajax-loader.gif" />
+                                        </li>
+                                    </ul>
                                 </div><!-- /.box-body -->
+                                <div class="box-footer text-center">
+                                    <a id="arsip" class="uppercase  arsip">Berikutnya</a>
+                                </div><!-- /.box-footer -->
                             </div>
                         </div>
                     </div>
@@ -174,18 +213,16 @@
             <!-- Create the tabs -->
             <ul class="nav nav-tabs nav-stacked">
                 <li><a href="#header">Atas</a></li>
-                <li><a href="#section-1">Aktif</a></li>
+                <li><a href="#perlu-perhatian">Perlu Perhatian</a></li>
+                <li><a href="#section-1">Dalam Pelaksanaan</a></li>
+                <li><a href="#section-2">Belum Terjadwal</a></li>
                 <li><a href="#section-3">Arsip</a></li>
-
             </ul>
-
             <!-- Tab panes -->
-
         </aside><!-- /.control-sidebar -->
         <!-- Add the sidebar's background. This div must be placed
              immediately after the control sidebar -->
         <div class="control-sidebar-bg"></div>
-
     </div><!-- ./wrapper -->
 
     <div id="ModalHapus" class="modal fade" role="dialog">
@@ -205,7 +242,6 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
-
         </div>
     </div>
 
