--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -436,6 +436,7 @@
 											-->
 										<div class="row">
 											<div class="col-md-12">
+                                                <a href="pengadaan-list.html">pengadaan-list.html</a>
 												<div class=" panel-header-white">
 													<span class="title-header" id="section-7">Personil</span>
 												</div>
