Home Controller, Announcement, Detail Data, Monitoring Pekerjaan, View Monitoring, Monitoring Repo, Pengadaan, Pengadaan Repo, ECatalogue, Monitoring Proyek Add, Monitoring Selection, Pengadaan Add, Pengadaan Detail, Sistem Monitoring

--- a/MTF_x/Views/Home/Announcement.cshtml
+++ b/MTF_x/Views/Home/Announcement.cshtml
@@ -33,7 +33,7 @@
                                                     No. Nota Internal
                                                 </th>
                                                 <th>
-                                                    Hps/Pagu
+                                                    Hps
                                                 </th>
                                                 <th>
                                                     Akhir Pendaftaran
@@ -87,13 +87,8 @@
 
                                                 </tr>
                                             }
-
-
-
                                         </tbody>
-
                                     </table>
-
                                 </div>
                             </div>
                         </div>
