--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -152,7 +152,7 @@
 												</div>
 												<div class="form-group col-md-6">
 													<label class="title">Aturan Pengadaan:</label>
-													<select id="AturanPengadaan" class="form-control select2" name="AturanPengadaan" style="width: 100%;">
+													<select id="AturanPengadaan" class="form-control select2" name="AturanPengadaan" style="width: 100%;" disabled>
 													  <option value="Pengadaan Tertutup"  selected>Pengadaan Tertutup</option>
                                                       <!-- <option>Pengadaan Penunjukan Langsung </option>-->
 													  <option value="Pengadaan Terbuka">Pengadaan Terbuka </option>
