--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="navbar-custom-menu">
                         <ul id="menu-top" class="nav navbar-nav">
-                            <li><a id="arsipkan" title="Arisipkan" href="#" class="arsipkan" style="display:none"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Arsipkan</a></li>
+                            <li><a id="arsipkan" title="Arsipkan" href="#" class="arsipkan" style="display:none"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Arsipkan</a></li>
                             <li><a id="ajukan" title="Ajukan" href="#" class="SimpanAjukan" style="display:none"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Ajukan</a></li>
                             <li><a id="edit" title="Add Item" href="#" style="display:none"><i class="fa fa-fw fa-pencil-square-o " style="font-size:20px;"></i>Edit</a></li>
                             <li><a id="setujui" title="Setujui" href="#" class="Setujui" style="display:none"><i class="fa fa-fw " style="font-size:20px;"></i>Setujui</a></li>
